--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>order-book</title>
+    <meta
+      name="description"
+      content="Real-time cryptocurrency order book visualization with live updates for BTC, ETH, and SOL trading pairs"
+    />
+    <title>Order Book - Real-time Cryptocurrency Trading</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
